@@ -253,4 +253,5 @@ i.default.values <- list(vertex=list(color="SkyBlue2",
                            arrow.mode=i.get.arrow.mode),
                          plot=list(layout=layout.random,
                            margin=c(0,0,0,0),
-                           rescale=TRUE))
+                           rescale=TRUE,
+                           asp=1))
